modules/gdscript/tests/scripts/Traits/analyzer/errors/invalid_trait_inheritance.gd
trait TraitA extends Node:
	pass

class ClassA extends TraitA:
	pass
